smelly-connect/tests/ui/public_surface.stderr
error[E0603]: module `runtime` is private
 --> tests/ui/public_surface.rs:1:21
  |
1 | use smelly_connect::runtime::control_plane::run_control_plane;
  |                     ^^^^^^^ private module
  |
note: the module `runtime` is defined here
 --> src/lib.rs
  |
  | mod runtime;
  | ^^^^^^^^^^^
