smelly-connect/tests/ui/public_surface.rs
use smelly_connect::runtime::control_plane::run_control_plane;

fn main() {
    let _ = run_control_plane;
}
